Fixed image issue on mobile.

--- a/styles.css
+++ b/styles.css
@@ -20,12 +20,11 @@ body {
   scroll-snap-points-y: repeat(100%);
   scroll-snap-type: y mandatory;
   -webkit-overflow-scrolling: touch;
-  /* scroll-snap-stop: always; */
 }
 
 .section-image {
   display: flex;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   overflow: hidden;
   scroll-snap-align: start;
